@@ -18,7 +18,8 @@ public class UserService
         this.restTemplate = restTemplateBuilder.build();
     }
 
-    public Map<String,Integer>userIdCount() throws RuntimeException
+//Logic for tally number of unique userId's in given link
+    public Map<String,Integer>userIdCounter() throws RuntimeException
     {
         try
         {
@@ -26,7 +27,7 @@ public class UserService
             List<UserEntity> list;
             if (user != null)
             {
-                list = new ArrayList<>(Arrays.asList(user));
+                list = new ArrayList<>(List.of(user));
                 Map<Integer, List<UserEntity>> userIdMap = list.stream().collect(Collectors.groupingBy(UserEntity::getUserId));
                 Map<String, Integer> resultMap = new HashMap<>();
                 userIdMap.forEach((key, value) -> resultMap.put("userId " + key, value.size()));
@@ -43,6 +44,7 @@ public class UserService
         }
     }
 
+//Logic for changing data 4 th array item of given link by hard coding
     public List<UserEntity> changedData() throws NullPointerException
     {
         try
@@ -51,9 +53,9 @@ public class UserService
             List<UserEntity> list;
             if (user != null)
             {
-                list = new ArrayList<>(Arrays.asList((user)));
-                list.get(4).setBody("1800 Flowers");
-                list.get(4).setTitle("1800 Flowers");
+                list = new ArrayList<>(List.of(user));
+                list.get(4).setTitle("1800 Flowers");   //setting Tittle of 4 th json array item to 1800Flowers
+                list.get(4).setBody("1800 Flowers");    //setting Body of 4 th json array item to 1800Flowers
                 return list;
             }
             else
@@ -67,7 +69,7 @@ public class UserService
         }
     }
 
-// using payload or request from user
+// Logic for changing data at specified array index of given link by requesting parameter at endpoint
     public List<UserEntity> changedData_param(int arrayIndex) throws NullPointerException
     {
         try
@@ -76,7 +78,7 @@ public class UserService
             List<UserEntity> list;
             if (user != null)
             {
-                list = new ArrayList<>(Arrays.asList((user)));
+                list = new ArrayList<>(List.of(user));
                 list.get(arrayIndex).setBody("1800 Flowers");
                 list.get(arrayIndex).setTitle("1800 Flowers");
                 return list;
